# ott-typst

./: .gitignore  Cargo.toml  README.md  deep-research-thinking-20260304-012935.md  demo.typ  プログラミング言語メタ理論のための次世代Ottツールチェーン：Rust、WebAssembly、およびTypstによる完全なアーキテクチャ再構築と詳細設計.md
crates/ott-bind/: Cargo.toml
crates/ott-bind/src/: lib.rs
crates/ott-cli/: Cargo.toml
crates/ott-cli/src/: main.rs
crates/ott-core/: Cargo.toml
crates/ott-core/src/: ast.rs  check.rs  error.rs  lib.rs  parser.rs  syntax.rs
crates/ott-core/tests/: tapl_arrow.rs  term_parsing.rs  term_typst_hom.rs  test10.rs  upstream_ott_tests.rs  user_syntax_auto.rs
crates/ott-render/: Cargo.toml
crates/ott-render/src/: lib.rs
crates/ott-wasm/: Cargo.toml
crates/ott-wasm/src/: lib.rs
docs/plans/: 2026-03-04-ott-typst-rust-nextgen-design.md
fixtures/tapl/: arrow_typst.ott
fixtures/upstream-ott/: README.md
typst/: demo.typ  ott.typ
