[package]
name = "ott-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ott-core = { path = "../ott-core" }
ott-render = { path = "../ott-render" }
clap = { version = "4.5.23", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }
serde_json = "1.0.128"
