[package]
name = "ott-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
ott-core = { path = "../ott-core" }
ott-render = { path = "../ott-render" }
serde = { version = "1", features = ["derive"] }
wasm-minimal-protocol = "0.1.0"
